--- a/notebooks/01analysis-preprocess-mly-raw.ipynb
+++ b/notebooks/01analysis-preprocess-mly-raw.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# apply stopword\n",
+    "# apply stopwords\n",
     "from nltk.corpus import stopwords\n",
     "\n",
     "stop = stopwords.words('stoplist.engmalay(combine).txt')\n",
