--- a/notebooks/01analysis-preprocess-eng.ipynb
+++ b/notebooks/01analysis-preprocess-eng.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "# one time setup only\n",
+    "# setup only\n",
     "#!pip install nltk pandas\n",
     "#nltk.download('stopwords')"
    ]
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# apply stopwords\n",
+    "# apply stopword\n",
     "from nltk.corpus import stopwords\n",
     "\n",
     "stop = stopwords.words('stoplist.engmalay(combine).txt')\n",
