--- a/notebooks/02extract-pos-universal-eng.ipynb
+++ b/notebooks/02extract-pos-universal-eng.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Tagging POS for malay bilingual dataset"
+    "### 2. Tagging POS for english dataset"
    ]
   },
   {
