--- a/notebooks/01analysis-preprocess-eng.ipynb
+++ b/notebooks/01analysis-preprocess-eng.ipynb
@@ -9,20 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# setup only\n",
+    "# one time setup only\n",
     "#!pip install nltk pandas\n",
     "#nltk.download('stopwords')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -47,32 +47,32 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load data\n",
-    "df = pd.read_csv(\"../datasets/english1970_data.csv\", encoding=\"utf-8\")\n",
+    "df = pd.read_csv('../datasets/english1970_data.csv', encoding=\"utf-8\")\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert data to lowercase, split\n",
-    "df = pd.read_csv(\"../datasets/english1970_data.csv\")\n",
+    "df = pd.read_csv('../datasets/english1970_data.csv')\n",
     "df.columns = ['comment_eng','sarc_majority']\n",
     "df['comment_eng'] = df['comment_eng'].str.lower().str.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "4  [ooi, government, national, front, you, people...      non-sarc      48"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# apply stopword\n",
+    "# apply stopwords\n",
     "from nltk.corpus import stopwords\n",
     "\n",
     "stop = stopwords.words('stoplist.engmalay(combine).txt')\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "4  [ooi, government, national, front, people, awa...      non-sarc      22"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "1970"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,16 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f0cee25f28>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x16976946668>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "Name: length, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,18 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x000001F0CECC9780>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x000001F0CEDF5A90>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000016976924BE0>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x00000169769039E8>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -397,12 +397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save to \n",
-    "df.to_csv(\"../datasets/english1970_data_post_stop.csv\", index=False)\n"
+    "df.to_csv('../datasets/english1970_data_post_stop.csv', index=False)\n"
    ]
   },
   {
@@ -433,5 +433,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
