--- a/notebooks/01analysis-preprocess-mly-raw.ipynb
+++ b/notebooks/01analysis-preprocess-mly-raw.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4  [oiii...kerjaan, bn..ko, org, sdr, x, .?, dh, ...      non-sarc      45"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4  [oiii...kerjaan, bn..ko, org, sdr, x, .?, dh, ...      non-sarc      41"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "1970"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2631641d9e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x27173229240>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "Name: length, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,18 +348,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000026316423128>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x000002631637BDD8>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000027172878780>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x0000027172B27160>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "4  Oiii...kerjaan bn..ko org sdr x .? Dh lh keraj...      non-sarc"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "4  Oiii...kerjaan bn..ko org sdr x .? Dh lh keraj...      non-sarc"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "freq                4          1001"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
        " ('jadi', 27)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        " ('...', 23)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
        " ...]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,12 +1946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save output to"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1974,5 +1981,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
