--- a/notebooks/02extract-pos-universal-eng.ipynb
+++ b/notebooks/02extract-pos-universal-eng.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -48,31 +48,33 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../datasets/english1970_data.csv\", header= 0, encoding=\"utf-8\")\n",
+    "# load data\n",
+    "df = pd.read_csv('../datasets/english1970_data.csv', header= 0, encoding=\"utf-8\")\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# lowercase\n",
     "df.columns = ['comment','sarc_majority']\n",
     "df['comment'] = df['comment'].str.lower().str.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -184,19 +186,20 @@
        "9          sarc  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# set max each column\n",
     "pd.set_option('display.max_colwidth', 1000)\n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -14435,19 +14438,20 @@
        " ...]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# tag with tagset\n",
     "pos_tagged_tokens = [nltk.pos_tag(t,tagset='universal') for t in df.comment]\n",
     "pos_tagged_tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -14558,7 +14562,7 @@
        "9          sarc  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14570,7 +14574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -15041,12 +15045,13 @@
        "[1970 rows x 2 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# only tagged taken\n",
     "df.comment = df.comment.apply(lambda x: [(t[0],) for t in x if t[0]=='ADJ' or t[0]=='ADV' or t[0]=='NOUN' or t[0]=='PRON' or t[1]=='VERB'])\n",
     "df.loc[df.comment.apply(len) == 0, 'comment'] = [[np.nan]]\n",
     "df"
@@ -15054,18 +15059,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# save to \n",
     "df.to_csv('../datasets/english1970_data_pos.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
