--- a/notebooks/03extract-punct-engmly-casual.ipynb
+++ b/notebooks/03extract-punct-engmly-casual.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# libraries\n",
     "import nltk\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -24,18 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# set max each column\n",
     "pd.set_option('display.max_colwidth', 80)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -46,42 +48,45 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load data\n",
     "df = pd.read_csv('../datasets/mly1970-sarc(raw).csv', header= 0, encoding=\"utf-8\")\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# column label\n",
     "df.columns = ['comment','sarc_majority']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# tokenizer\n",
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer(strip_handles=True, reduce_len=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -262,30 +267,32 @@
        "19          sarc  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# apply tokenize\n",
     "df['comment'] = df['comment'].apply(lambda t: tknzr.tokenize(t))\n",
     "df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# selected re punctuation only\n",
     "df.comment = df.comment.apply(lambda x: [t for t in x if re.match(r'([”?!\\'])', t)] or [0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +364,7 @@
        "Name: comment, Length: 1970, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -385,13 +392,14 @@
     }
    ],
    "source": [
+    "# set re punctuation to group\n",
     "replace_df = pd.DataFrame({'replacer': {0: 'punct1', 1: 'punct2', 2: 'punct3'}, 'punct': {0: '?', 1: '!', 2: \"'\"}})\n",
     "print (replace_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -405,6 +413,7 @@
     }
    ],
    "source": [
+    "# replace index re punctuation with group\n",
     "replace_df.punct = '\\\\' + replace_df.punct.apply(lambda x: x.format())\n",
     "d = replace_df.set_index('punct')['replacer'].to_dict()\n",
     "print (d)"
@@ -412,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -489,20 +498,21 @@
     }
    ],
    "source": [
+    "# apply puncttuation group to label\n",
     "df.comment = df.comment.apply(lambda x: pd.Series(x).astype(str).replace(d, regex=True).tolist())\n",
     "print (df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df.to_csv('../datasets/mly1970-punc.csv', index=False)\n",
-    "#replace and save to weka in librecalc"
+    "# save to \n",
+    "df.to_csv('../datasets/mly1970-punc.csv', index=False)"
    ]
   },
   {
@@ -512,7 +522,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#replace and save to weka in librecalc"
+   ]
   }
  ],
  "metadata": {
