--- a/notebooks/01analysis-preprocess-mly-raw.ipynb
+++ b/notebooks/01analysis-preprocess-mly-raw.ipynb
@@ -9,7 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# one time setup only\n",
+    "#!pip install nltk pandas\n",
+    "#nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -34,20 +45,20 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load data\n",
-    "df = pd.read_csv('../datasets/mly1970-sarc(raw).csv', encoding=\"utf-8\")\n",
+    "df = pd.read_csv('../datasets/mly1970_sarc(raw).csv', encoding=\"utf-8\")\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +142,7 @@
        "4  [oiii...kerjaan, bn..ko, org, sdr, x, .?, dh, ...      non-sarc      45"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +242,7 @@
        "4  [oiii...kerjaan, bn..ko, org, sdr, x, .?, dh, ...      non-sarc      41"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +267,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +287,7 @@
        "1970"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27173229240>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1fd67e26748>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +348,7 @@
        "Name: length, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,18 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x0000027172878780>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x0000027172B27160>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x000001FD67D71390>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x000001FD67CD3F28>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -392,20 +403,20 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# re-read data\n",
-    "sentiment = pd.read_csv('../datasets/mly1970-sarc(raw).csv')\n",
+    "sentiment = pd.read_csv('../datasets/mly1970_sarc(raw).csv')\n",
     "sentiment.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +483,7 @@
        "4  Oiii...kerjaan bn..ko org sdr x .? Dh lh keraj...      non-sarc"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +561,7 @@
        "4  Oiii...kerjaan bn..ko org sdr x .? Dh lh keraj...      non-sarc"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +613,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Alhamdulillah</td>\n",
+       "      <td>Syok sendiri</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -615,14 +626,14 @@
        "</div>"
       ],
       "text/plain": [
-       "              comment sarc_majority\n",
-       "count            1970          1970\n",
-       "unique           1956             2\n",
-       "top     Alhamdulillah      non-sarc\n",
-       "freq                4          1001"
+       "             comment sarc_majority\n",
+       "count           1970          1970\n",
+       "unique          1956             2\n",
+       "top     Syok sendiri      non-sarc\n",
+       "freq               4          1001"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -667,12 +678,12 @@
     }
    ],
    "source": [
-    "sentiment.comment.to_csv('../datasets/mly1970-sarc-post_stop.csv', index=False)"
+    "sentiment.comment.to_csv('../datasets/mly1970_sarc_post_stop.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +801,7 @@
        " ('jadi', 27)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +922,7 @@
        " ('...', 23)]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1945,7 @@
        " ...]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
