--- a/notebooks/02extract-pos-universal-eng.ipynb
+++ b/notebooks/02extract-pos-universal-eng.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "# lowercase\n",
+    "# column label, convert to lowercase, split\n",
     "df.columns = ['comment','sarc_majority']\n",
     "df['comment'] = df['comment'].str.lower().str.split()"
    ]
