--- a/features/05extract-idsync-eng.ipynb
+++ b/features/05extract-idsync-eng.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +213,7 @@
        "4     story on paper  idsync5"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -333,19 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# extract only idiosyncratic group\n",
-    "df.comment = df.comment.apply(lambda x: [t for t in x if re.match('idsync[0-9]+$', t)] or [0])"
+    "df.comment = df.comment.apply(lambda x: [t for t in x if re.match('idsync[0-9]+$', t)] or [np.nan])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -355,67 +355,67 @@
      "output_type": "stream",
      "text": [
       "        comment sarc_majority\n",
-      "0           [0]          sarc\n",
-      "1           [0]      non-sarc\n",
-      "2           [0]          sarc\n",
-      "3           [0]      non-sarc\n",
-      "4           [0]      non-sarc\n",
-      "5           [0]          sarc\n",
-      "6           [0]      non-sarc\n",
+      "0         [nan]          sarc\n",
+      "1         [nan]      non-sarc\n",
+      "2         [nan]          sarc\n",
+      "3         [nan]      non-sarc\n",
+      "4         [nan]      non-sarc\n",
+      "5         [nan]          sarc\n",
+      "6         [nan]      non-sarc\n",
       "7     [idsync1]          sarc\n",
-      "8           [0]          sarc\n",
-      "9           [0]          sarc\n",
-      "10          [0]          sarc\n",
-      "11          [0]          sarc\n",
-      "12          [0]          sarc\n",
-      "13          [0]          sarc\n",
-      "14          [0]      non-sarc\n",
-      "15          [0]      non-sarc\n",
-      "16          [0]      non-sarc\n",
-      "17          [0]          sarc\n",
-      "18          [0]      non-sarc\n",
-      "19          [0]          sarc\n",
-      "20          [0]          sarc\n",
-      "21          [0]      non-sarc\n",
-      "22          [0]          sarc\n",
-      "23          [0]      non-sarc\n",
-      "24          [0]      non-sarc\n",
-      "25          [0]          sarc\n",
-      "26          [0]      non-sarc\n",
-      "27          [0]      non-sarc\n",
-      "28          [0]          sarc\n",
-      "29          [0]      non-sarc\n",
+      "8         [nan]          sarc\n",
+      "9         [nan]          sarc\n",
+      "10        [nan]          sarc\n",
+      "11        [nan]          sarc\n",
+      "12        [nan]          sarc\n",
+      "13        [nan]          sarc\n",
+      "14        [nan]      non-sarc\n",
+      "15        [nan]      non-sarc\n",
+      "16        [nan]      non-sarc\n",
+      "17        [nan]          sarc\n",
+      "18        [nan]      non-sarc\n",
+      "19        [nan]          sarc\n",
+      "20        [nan]          sarc\n",
+      "21        [nan]      non-sarc\n",
+      "22        [nan]          sarc\n",
+      "23        [nan]      non-sarc\n",
+      "24        [nan]      non-sarc\n",
+      "25        [nan]          sarc\n",
+      "26        [nan]      non-sarc\n",
+      "27        [nan]      non-sarc\n",
+      "28        [nan]          sarc\n",
+      "29        [nan]      non-sarc\n",
       "...         ...           ...\n",
-      "1940        [0]      non-sarc\n",
-      "1941        [0]      non-sarc\n",
-      "1942        [0]      non-sarc\n",
-      "1943        [0]          sarc\n",
-      "1944        [0]      non-sarc\n",
-      "1945        [0]      non-sarc\n",
-      "1946        [0]      non-sarc\n",
-      "1947        [0]      non-sarc\n",
-      "1948        [0]      non-sarc\n",
-      "1949        [0]      non-sarc\n",
-      "1950        [0]      non-sarc\n",
-      "1951        [0]          sarc\n",
-      "1952        [0]      non-sarc\n",
-      "1953        [0]      non-sarc\n",
-      "1954        [0]      non-sarc\n",
-      "1955        [0]      non-sarc\n",
-      "1956        [0]      non-sarc\n",
-      "1957        [0]      non-sarc\n",
-      "1958        [0]      non-sarc\n",
-      "1959        [0]      non-sarc\n",
-      "1960        [0]      non-sarc\n",
-      "1961        [0]      non-sarc\n",
-      "1962        [0]      non-sarc\n",
-      "1963        [0]          sarc\n",
-      "1964        [0]          sarc\n",
-      "1965        [0]          sarc\n",
-      "1966        [0]      non-sarc\n",
-      "1967        [0]      non-sarc\n",
-      "1968        [0]      non-sarc\n",
-      "1969        [0]          sarc\n",
+      "1940      [nan]      non-sarc\n",
+      "1941      [nan]      non-sarc\n",
+      "1942      [nan]      non-sarc\n",
+      "1943      [nan]          sarc\n",
+      "1944      [nan]      non-sarc\n",
+      "1945      [nan]      non-sarc\n",
+      "1946      [nan]      non-sarc\n",
+      "1947      [nan]      non-sarc\n",
+      "1948      [nan]      non-sarc\n",
+      "1949      [nan]      non-sarc\n",
+      "1950      [nan]      non-sarc\n",
+      "1951      [nan]          sarc\n",
+      "1952      [nan]      non-sarc\n",
+      "1953      [nan]      non-sarc\n",
+      "1954      [nan]      non-sarc\n",
+      "1955      [nan]      non-sarc\n",
+      "1956      [nan]      non-sarc\n",
+      "1957      [nan]      non-sarc\n",
+      "1958      [nan]      non-sarc\n",
+      "1959      [nan]      non-sarc\n",
+      "1960      [nan]      non-sarc\n",
+      "1961      [nan]      non-sarc\n",
+      "1962      [nan]      non-sarc\n",
+      "1963      [nan]          sarc\n",
+      "1964      [nan]          sarc\n",
+      "1965      [nan]          sarc\n",
+      "1966      [nan]      non-sarc\n",
+      "1967      [nan]      non-sarc\n",
+      "1968      [nan]      non-sarc\n",
+      "1969      [nan]          sarc\n",
       "\n",
       "[1970 rows x 2 columns]\n"
      ]
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
