--- a/features/02extract-pos-universal-eng.ipynb
+++ b/features/02extract-pos-universal-eng.ipynb
@@ -9,32 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\Suhairi.Suhaimin\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n",
-      "[nltk_data] Downloading package universal_tagset to\n",
-      "[nltk_data]     C:\\Users\\Suhairi.Suhaimin\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\universal_tagset.zip.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# setup only\n",
     "#nltk.download('averaged_perceptron_tagger')\n",
@@ -43,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +48,7 @@
        "(1970, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -209,7 +186,7 @@
        "9          sarc  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -14461,7 +14438,7 @@
        " ...]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14474,7 +14451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -14585,7 +14562,7 @@
        "9          sarc  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14597,7 +14574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -14710,7 +14687,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14740,7 +14717,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14750,7 +14727,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14795,17 +14772,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1942</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1943</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1944</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14815,17 +14792,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1946</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1947</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1948</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14840,22 +14817,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1951</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1952</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1953</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1954</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14870,12 +14847,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1957</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1958</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14895,7 +14872,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1962</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14905,7 +14882,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1964</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14920,7 +14897,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1967</th>\n",
-       "      <td>[nan]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>non-sarc</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -14956,15 +14933,15 @@
        "13                                                                                                                                                [(take,)]   \n",
        "14                                                                                                                                               [(thank,)]   \n",
        "15                                                                                 [(want,), (calling,), (delay,), (is,), (gonna,), (feed,), (i,), (knew,)]   \n",
-       "16                                                                                                                                                    [nan]   \n",
+       "16                                                                                                                                                      NaN   \n",
        "17                                                                                                                                  [(believe,), (pushes,)]   \n",
        "18                                                                                                                                              [(return,)]   \n",
        "19                                                                                                                                           [(go,), (go,)]   \n",
        "20                      [(collected,), (appears,), (is,), (develop,), (is,), (kah,), (does,), (have,), (dock,), (brim,), (only,,), (can,), (think,), (is,)]   \n",
        "21                                                                                                                                                [(it's,)]   \n",
-       "22                                                                                                                                                    [nan]   \n",
+       "22                                                                                                                                                      NaN   \n",
        "23                                                                                                           [(do,), (want,), (want,), (najib,), (resign,)]   \n",
-       "24                                                                                                                                                    [nan]   \n",
+       "24                                                                                                                                                      NaN   \n",
        "25                                                                                                                     [(do,), (listen,), (can,), (trust,)]   \n",
        "26                                                                                                                         [(shit,), (revealed,), (raise,)]   \n",
        "27                                                                                                                                                [(fell,)]   \n",
@@ -14973,32 +14950,32 @@
        "...                                                                                                                                                     ...   \n",
        "1940                                                                                                                                             [(thank,)]   \n",
        "1941                                                                                                                                [(have,), (increased,)]   \n",
-       "1942                                                                                                                                                  [nan]   \n",
-       "1943                                                                                                                                                  [nan]   \n",
-       "1944                                                                                                                                                  [nan]   \n",
+       "1942                                                                                                                                                    NaN   \n",
+       "1943                                                                                                                                                    NaN   \n",
+       "1944                                                                                                                                                    NaN   \n",
        "1945                                                                                                                         [(recover,), (will,), (miss,)]   \n",
-       "1946                                                                                                                                                  [nan]   \n",
-       "1947                                                                                                                                                  [nan]   \n",
-       "1948                                                                                                                                                  [nan]   \n",
+       "1946                                                                                                                                                    NaN   \n",
+       "1947                                                                                                                                                    NaN   \n",
+       "1948                                                                                                                                                    NaN   \n",
        "1949                                                                                                                 [(are,), (exhausted,), (are,), (fed,)]   \n",
        "1950                                                                                                                                               [(was,)]   \n",
-       "1951                                                                                                                                                  [nan]   \n",
-       "1952                                                                                                                                                  [nan]   \n",
-       "1953                                                                                                                                                  [nan]   \n",
-       "1954                                                                                                                                                  [nan]   \n",
+       "1951                                                                                                                                                    NaN   \n",
+       "1952                                                                                                                                                    NaN   \n",
+       "1953                                                                                                                                                    NaN   \n",
+       "1954                                                                                                                                                    NaN   \n",
        "1955                                                                                                       [(amused,), (hear,), (closed,), (is,), (going,)]   \n",
        "1956                                                                                                                                  [(hope,), (recover,)]   \n",
-       "1957                                                                                                                                                  [nan]   \n",
-       "1958                                                                                                                                                  [nan]   \n",
+       "1957                                                                                                                                                    NaN   \n",
+       "1958                                                                                                                                                    NaN   \n",
        "1959                                                                               [(think,), (saw,), (have,), (decreased,), (reserve,), (had,), (stated,)]   \n",
        "1960                                                                                                                                             [(datuk,)]   \n",
        "1961               [(follow,), (is,), (bankrupt,), (remains,), (malaysia,), (should,), (believe,), (ye,), (did,), (do,), (help,), (may,), (be,), (oppose,)]   \n",
-       "1962                                                                                                                                                  [nan]   \n",
+       "1962                                                                                                                                                    NaN   \n",
        "1963                                                                                                                                              [(take,)]   \n",
-       "1964                                                                                                                                                  [nan]   \n",
+       "1964                                                                                                                                                    NaN   \n",
        "1965                                                                                                                                       [(do,), (know,)]   \n",
        "1966                                                                                                                                                [(is,)]   \n",
-       "1967                                                                                                                                                  [nan]   \n",
+       "1967                                                                                                                                                    NaN   \n",
        "1968                                                                                                                                                [(is,)]   \n",
        "1969                                                                                                                  [(use,), (rolling,), (oops,), (say,)]   \n",
        "\n",
@@ -15068,7 +15045,7 @@
        "[1970 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15076,13 +15053,13 @@
    "source": [
     "# only tagged taken\n",
     "df.comment = df.comment.apply(lambda x: [(t[0],) for t in x if t[0]=='ADJ' or t[0]=='ADV' or t[0]=='NOUN' or t[0]=='PRON' or t[1]=='VERB'])\n",
-    "df.loc[df.comment.apply(len) == 0, 'comment'] = [[np.nan]]\n",
+    "df.loc[df.comment.apply(len) == 0, 'comment'] = [np.nan]\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15092,26 +15069,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save to \n",
-    "df.to_csv('../datasets/english1970_data_pos.csv', index=False)"
+    "df.to_csv('../datasets/english1970_pos.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "#remove re and save to weka in librecalc"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
